--- a/package.json
+++ b/package.json
@@ -18,14 +18,19 @@
         "eslint": "^8.30.0"
     },
     "dependencies": {
+        "@discordjs/opus": "^0.9.0",
+        "@discordjs/voice": "0.16.0",
         "@dqbd/tiktoken": "^1.0.7",
         "axios": "^1.2.1",
         "cheerio": "^1.0.0-rc.12",
         "discord.js": "^14.11.0",
         "dotenv": "^16.0.3",
         "express": "^4.18.2",
+        "ffmpeg-static": "^5.1.0",
         "fs": "^0.0.1-security",
+        "libsodium-wrappers": "0.7.11",
         "mongoose": "^6.8.1",
+        "play-dl": "1.9.6",
         "pm2": "^5.3.0"
     }
 }
